feat: :art: Cambios en el Header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,14 @@
-<header class="flex justify-center items-center py-5 w-full xl:w-[1120px] mx-auto">
-  <!-- <img class="rounded-full w-12 h-12" src="/public/fixita.jpeg" alt="ismadev" /> -->
-  <nav class="flex flex-row gap-x-5 opacity-80">
-    <a class="text-white" href="#top">Inicio</a>
-    <a class="text-white" href="#sobremi">Sobre mi</a>
-    <a class="text-white" href="#experiencia">Experiencia</a>
-    <a class="text-white" href="#tecnologias">Tecnologias</a>
-    <a class="text-white" href="#contacto">Contacto</a>
+<header class="flex flex-col sm:flex-row justify-between items-center py-5 w-full max-w-[450px] mx-auto px-5">
+  <!-- Imagen de perfil (opcional) -->
+  <!-- <img class="rounded-full w-12 h-12 mb-4 sm:mb-0" src="/public/fixita.jpeg" alt="ismadev" /> -->
+
+  <!-- Navegación -->
+  <nav class="flex flex-wrap justify-center sm:justify-end gap-x-5 gap-y-2 opacity-80">
+    <a class="text-white hover:text-gray-300 transition" href="#top">Inicio</a>
+    <a class="text-white hover:text-gray-300 transition" href="#sobremi">Sobre mí</a>
+    <a class="text-white hover:text-gray-300 transition" href="#experiencia">Experiencia</a>
+    <a class="text-white hover:text-gray-300 transition" href="#tecnologias">Tecnologías</a>
   </nav>
 </header>
+
+
