--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,13 +54,13 @@ import Sobremi from "../components/Sobremi.astro";
           LinkedIn
         </SocialPill>
         <SocialPill
-          href="https://www.linkedin.com/in/ismael-herrada-5b6183308/"
+          href="https://github.com/fixita"
         >
           <GitHubIcon class="size-4 md:size-6" />
           GitHub
         </SocialPill>
         <SocialPill
-          href="https://www.linkedin.com/in/ismael-herrada-5b6183308/"
+          href="mailto:ismaelignaciohe@gmail.com"
         >
           <MailIcon class="size-4 md:size-6" />
           ismaelignaciohe@gmail.com
