--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,31 @@
-<header class="flex flex-col sm:flex-row justify-between items-center py-5 w-full max-w-[450px] mx-auto px-5">
-  <!-- Imagen de perfil (opcional) -->
-  <!-- <img class="rounded-full w-12 h-12 mb-4 sm:mb-0" src="/public/fixita.jpeg" alt="ismadev" /> -->
+<header 
+  class="flex flex-col sm:flex-row justify-between items-center py-5 w-full max-w-[450px] mx-auto px-5">
 
-  <!-- Navegación -->
   <nav class="flex flex-wrap justify-center sm:justify-end gap-x-5 gap-y-2 opacity-80">
-    <a class="text-white hover:text-gray-300 transition" href="#top">Inicio</a>
-    <a class="text-white hover:text-gray-300 transition" href="#sobremi">Sobre mí</a>
-    <a class="text-white hover:text-gray-300 transition" href="#experiencia">Experiencia</a>
-    <a class="text-white hover:text-gray-300 transition" href="#tecnologias">Tecnologías</a>
+    <a class="text-white hover:text-gray-300 transition-transform transform hover:scale-110" href="#top">Inicio</a>
+    <a class="text-white hover:text-gray-300 transition-transform transform hover:scale-110" href="#sobremi">Sobre mí</a>
+    <a class="text-white hover:text-gray-300 transition-transform transform hover:scale-110" href="#experiencia">Experiencia</a>
+    <a class="text-white hover:text-gray-300 transition-transform transform hover:scale-110" href="#tecnologias">Tecnologías</a>
   </nav>
 </header>
+
+<style>
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .animate-fade-in {
+    animation: fadeIn 1s ease-out;
+  }
+</style>
+
 
 
