--- a/src/components/Sobremi.astro
+++ b/src/components/Sobremi.astro
@@ -1,10 +1,6 @@
-<article class="rounded-xl border border-gray-700  p-4">
+<article class="rounded-xl border border-gray-700 p-4">
   <div class="flex items-center gap-4">
-    <img
-      alt=""
-      src="/public/fixita.jpeg"
-      class="size-16 rounded-full object-cover"
-    />
+    <img alt="" src="/fixita.jpeg" class="size-16 rounded-full object-cover" />
 
     <div>
       <h3 class="text-lg font-medium text-white">Ismael Herrada Escudero</h3>
