--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Sobremi from "../components/Sobremi.astro";
     <SectionContainer class="py-44 pb-24">
       <img
         class="rounded-full size-12 mb-3"
-        src="/public/fixita.jpeg"
+        src="/fixita.jpeg"
         alt="ismadev"
       />
       <div class="text-center sm:text-left">
